--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
